rds/sunet/sunetrds-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sunetrds
spec:
  finalizers:
  - kubernetes
