rds/sunet/doris-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: layer1-port-doris
  namespace: sunetrds
  labels:
    app: layer1-port-doris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: layer1-port-doris
  template:
    metadata:
      creationTimestamp:
      labels:
        app: layer1-port-doris
    spec:
      containers:
      - name: doris
        image: docker.sunet.se/rds/doris-rds:ci-RDS-Connectors-13
        resources: {}
  strategy: {}
status: {}
