rds/sunet/sunetrds-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: sunetrds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgresql
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
