rds/sunet/doris-service.yaml
---
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: doris-connector
    name: port-doris-connector 
    namespace: sunetrds
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: doris-connector
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
