rds/sunet/sunet-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sunet-drive
  namespace: sunetrds
spec:
  type: ExternalName
  externalName: sunet.drive.test.sunet.se
  ports:
    - port: 443
